--- a/Serverless.StaticWebApp/www/index.html
+++ b/Serverless.StaticWebApp/www/index.html
@@ -8,11 +8,11 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bare - Start Bootstrap Template</title>
+    <title>Serverless Web</title>
 
     <!-- Bootstrap core CSS -->
-    <!--<link href="http://localhost:7071/api/WebApp?file=vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
-      <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="http://localhost:7071/api/WebApp/www/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!--<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" />-->
 
     <!-- Custom styles for this template -->
     <style>
@@ -34,25 +34,19 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container">
-        <a class="navbar-brand" href="#">Start Bootstrap</a>
+        <a class="navbar-brand" href="#">Serverless Web</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home
+              <a class="nav-link" href="WebApp/Index.html">Home
                 <span class="sr-only">(current)</span>
               </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Services</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link" href="../WebApp/Contact.html">Contact</a>
             </li>
           </ul>
         </div>
@@ -74,12 +68,9 @@
     </div>
 
     <!-- Bootstrap core JavaScript -->
-    <!--<script src="http://localhost:7071/api/WebApp?file=vendor/jquery/jquery.min.js"></script>
-    <script src="http://localhost:7071/api/WebApp?file=vendor/bootstrap/js/bootstrap.bundle.min.js"></script>-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
-
+    <script src="http://localhost:7071/api/WebApp/www/vendor/jquery/jquery.min.js"></script>
+    <script src="http://localhost:7071/api/WebApp/www/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <!--<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>-->
   </body>
-
 </html>
